# etc2comp

EtcLib/: BUILD.bazel
EtcLib/Etc/: EtcFilter.cpp
EtcTool/: BUILD.bazel  EtcTool.cpp
