
config_setting(
    name = "linux_x86_64",
    values = {"cpu": "k8"},
)

cc_library(
    name = "EtcLib",
    srcs = glob([
        "Etc/*.h",
        "EtcCodec/*.h",
        "Etc/*.cpp",
        "EtcCodec/*.cpp",
    ]),
    includes = [
        "Etc",
        "EtcCodec",
    ],
    linkopts = select({
        "linux_x86_64": ["-pthread"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)